Update config.json with correct raw url of fna file

--- a/mangifera-indica/config.json
+++ b/mangifera-indica/config.json
@@ -8,11 +8,11 @@
         "adapter": {
           "type": "IndexedFastaAdapter",
           "fastaLocation": {
-            "uri": "mangifera-indica.fna",
+            "uri": "https://github.com/parvatiritika2005/jb2-data-test/raw/master/mangifera-indica/mangifera-indica.fna",
             "locationType": "UriLocation"
           },
           "faiLocation": {
-            "uri": "mangifera-indica.fna.fai",
+            "uri": "https://raw.githubusercontent.com/parvatiritika2005/jb2-data-test/master/mangifera-indica/mangifera-indica.fna.fai",
             "locationType": "UriLocation"
           }
         }
